--- a/src/package.json
+++ b/src/package.json
@@ -14,6 +14,7 @@
     "expresss": "^0.0.0",
     "googleapis": "^107.0.0",
     "multer": "^1.4.5-lts.1",
-    "serverless-http": "^3.0.2"
+    "serverless-http": "^3.0.2",
+    "cors": "^2.8.5"
   }
 }
